--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "convenient",
+  "name": "convenable",
   "version": "0.0.2",
   "description": "a bunch of disparate, but convenient functions",
   "license": "MIT",
