--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convenable",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "a bunch of disparate, but convenient functions",
   "license": "MIT",
   "main": "./dist/main.js",
@@ -32,7 +32,8 @@
     "eject": "react-scripts-ts eject",
     "compile": "tsc --moduleResolution Node --module commonjs --target es5 --outDir dist --declaration",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prepublish": "npm compile"
   },
   "keywords": [
     "utils",
