got rid of tslint warnings

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convenable",
-  "version": "0.0.9",
+  "version": "0.0.92",
   "description": "a bunch of disparate, but convenient functions",
   "license": "MIT",
   "main": "./dist/main.js",
@@ -19,7 +19,7 @@
     "react-dom": "latest",
     "react": "latest",
     "react-scripts-ts": "latest",
-    "rimraf": "^2.6.2",
+    "rimraf": "latest",
     "typescript": "latest",
     "@types/react-dom": "latest",
     "@types/react": "latest",
@@ -30,11 +30,11 @@
     "demo:start": "react-scripts-ts start",
     "demo:build": "react-scripts-ts build",
     "demo:test": "react-scripts-ts test --env=jsdom",
-    "demo":"npm run demo:build",
+    "demo": "npm run demo:build",
     "package:build": "tsc --moduleResolution Node --module commonjs --target es5 --outDir dist --declaration",
     "package:clean": "rimraf ./dist",
-    "start":"npm run demo:start",
-    "package":"npm run package:clean && npm run package:build",
+    "start": "npm run demo:start",
+    "package": "npm run package:clean && npm run package:build",
     "predeploy": "npm run package && npm run demo",
     "deploy": "gh-pages -d build"
   },
