--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "demo:start": "react-scripts-ts start",
     "demo:build": "react-scripts-ts build",
-    "demo:test": "react-scripts-ts test --env=jsdom",
+    "test": "react-scripts-ts test --env=jsdom",
     "demo": "npm run demo:build",
     "package:build": "tsc --moduleResolution Node --module commonjs --target es5 --outDir dist --declaration",
     "package:clean": "rimraf ./dist",
