--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "url": "https://github.com/Xananax/convenient/issues"
   },
   "devDependencies": {
+    "@types/jest": "^22.2.3",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "gh-pages": "latest",
-    "react-dom": "latest",
     "react": "latest",
+    "react-dom": "latest",
     "react-scripts-ts": "latest",
     "rimraf": "latest",
-    "typescript": "latest",
-    "@types/react-dom": "latest",
-    "@types/react": "latest",
-    "@types/jest": "latest",
-    "@types/node": "latest"
+    "typescript": "latest"
   },
   "scripts": {
     "demo:start": "react-scripts-ts start",
@@ -41,5 +41,9 @@
   "keywords": [
     "utils",
     "typescript"
-  ]
+  ],
+  "dependencies": {
+    "@types/jsdom": "^11.0.4",
+    "jsdom": "^11.10.0"
+  }
 }
