--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
     },
     "editor.tabSize": 2,
     "editor.renderWhitespace": "boundary",
-    "editor.detectIndentation": false
-}
+    "editor.detectIndentation": false,
+    "cSpell.words": [
+      "checkboxes"
+    ]
+  }
