--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "convenable",
+  "name": "@xananax/convenient",
   "version": "0.0.966",
   "description": "A bunch of disparate, but convenient functions",
   "license": "MIT",
